# Cnake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
hdr/: Apples.h  Map.h  Overwrite.h  Queue.h  Shared.h  Snake.h  Tail.h  Threads.h
hdr/Structs/: DataS.h  FullData.h  IntTuple.h  Queue.h  QueueBase.h  SharedContent.h
src/: Apples.c  Map.c  Overwrite.c  Queue.c  SnakeHandler.c  Tail.c  Threads.c  main.c
